--- a/residents.html
+++ b/residents.html
@@ -420,9 +420,9 @@
     document.addEventListener('DOMContentLoaded', () => {
       const bios = {
         Kosowsky: [
-          'Kosowsky is a DJ, producer, and the founder of Anubis Underground, based in Ljubljana, Slovenia. Known for his diverse and powerful sets, he blends all shades of hard techno into a relentless mix that defines the core energy of the label.',
-          'With years of experience in the underground scene, Kosowsky has shaped the sound and vision of Anubis Underground since its inception.',
-          'His production style merges industrial textures with driving rhythms, creating tracks that resonate deeply with the techno community.'
+          'Kosowsky, a 25-year-old DJ, performs under the artist name Kosowsky. He represents the young force of the Slovenian hard techno and schranz scene, pushing the boundaries of the local underground with his distinctive raw and relentless sound.',
+          'His style, influenced by artists such as Nikolina and Kobosil, maintains a unique identity that blends unyielding energy, a powerful groove, and a dark industrial aesthetic.',
+          'With each set, Kosowsky creates an unforgettable experience that takes the audience into a state of rhythmic and energetic ecstasy.'
         ],
         Kunja: [
           'KUNJA is a young yet experienced artist who blends the driving rhythms of Hard Groove, Schranz, Hard Techno, and Industrial into an unforgettable musical journey. His sets are known for their energy, refined track selection, and deep connection with the crowd.',
@@ -430,8 +430,8 @@
           'With a sharp sense for reading the vibe of the room, KUNJA is not just a performer but a true atmosphere creator – whether it’s an underground event or a major festival stage. His mission is clear: to turn every performance into an experience that lingers with the audience long after the last beat.'
         ],
         Bahun: [
-          'Bahun is a DJ from Tržič, Slovenia, delivering fast and unforgiving schranz infused with a taste of every genre. His rare spark of vitality turns every set into a storm of rhythm and raw euphoria, where intensity meets groove and the crowd moves as one.',
-          'Bahun\'s eclectic approach brings unexpected energy to every performance, making each set a unique journey.',
+          'Rok Bahun, known under the artist name B̷A̷H̷U̷N̷, is a DJ and performer from Ljubljana (Slovenia) and a member of the Anubis Underground collective.',
+          'With his raw energy and heavy rhythms of hard techno, schranz, and groove sounds, he creates an intense club atmosphere where the audience loses all sense of time.',
           'His passion for pushing boundaries has earned him recognition in the underground techno community.'
         ],
         Kayn: [
@@ -440,9 +440,9 @@
           'Under the moniker "The King of Purgatory," Kayn keeps his identity hidden, embracing the shadows while delivering high-octane sets for fans of the hardest industrial techno. He is now set to produce original tracks, bringing his signature dark, fast-paced style to new productions.'
         ],
         Nazh: [
-          'Nazh is a DJ from Ljubljana, Slovenia, bringing unstoppable energy to every set with his powerful schranz sound. Known for fast-paced, hard-hitting rhythms, he drives the crowd into motion with precision and intensity, creating an atmosphere where raw energy and pure rave spirit collide on the dancefloor.',
-          'Nazh\'s high-octane performances are characterized by seamless mixing and relentless energy that keeps crowds moving.',
-          'His passion for schranz and hard techno has made him a resident favorite at Anubis events.'
+          'Nazh is a DJ from Ljubljana who brings a strong tempo and a genuine love for hard raw energy to the stage.',
+          'His style combines influences from artists such as In Verruf, Triptykh and Klangkuenstler.',
+          'He prefers to play schranz and hard techno, especially at harder events, where he can raise the energy of the room to the maximum. If necessary, he can also fully adapt to the hard bounce atmosphere, when the event requires a slightly lighter, but still dynamic line.'
         ],
         Vanch: [
           'Vanch is a DJ and producer from Borovnica, Slovenia, known for his dark and unrelenting fusion of bochka and pure industrial. His sets dive deep into the mechanical void, merging distortion and rhythm into a relentless force that consumes the dancefloor in raw intensity.',
