--- a/home.html
+++ b/home.html
@@ -195,6 +195,13 @@
   <div class="content">
     <!-- Hero Section -->
     <div class="hero-section">
+      <!-- Decorative snake image - top left -->
+      <img src="Media/Graphic/snake_top_left.webp" alt="" class="hero-snake-top-left">
+      <!-- Decorative snake image - top right -->
+      <img src="Media/Graphic/snake_top_right.webp" alt="" class="hero-snake-top-right">
+      <!-- Decorative snake image - bottom right -->
+      <img src="Media/Graphic/snake_bottom_right.webp" alt="" class="hero-snake-bottom-right">
+      
       <div class="hero-content">
         <div class="hero-logo">
           <img src="Media/Logo/logo.png" alt="Anubis Underground" class="hero-logo-img">
@@ -325,9 +332,7 @@
 
   </div>
 
-  <style>
 
-  </style>
   
   <footer class="footer">
     <p>Copyright 2025 © All rights Reserved. Design by Anubis Underground</p>
