--- a/residents.html
+++ b/residents.html
@@ -181,6 +181,13 @@
 
   <!-- Hero Section -->
   <section class="hero-section">
+    <!-- Decorative snake image - top left -->
+    <img src="Media/Graphic/snake_top_left.webp" alt="" class="hero-snake-top-left">
+    <!-- Decorative snake image - top right -->
+    <img src="Media/Graphic/snake_top_right.webp" alt="" class="hero-snake-top-right">
+    <!-- Decorative snake image - bottom right -->
+    <img src="Media/Graphic/snake_bottom_right.webp" alt="" class="hero-snake-bottom-right">
+    
     <div class="hero-bg"></div>
     <div class="hero-content">
       <div class="hero-logo">
