--- a/rules.html
+++ b/rules.html
@@ -187,6 +187,13 @@
   
   <!-- Hero Section for Rules -->
   <div class="rules-hero">
+    <!-- Decorative snake image - top left -->
+    <img src="Media/Graphic/snake_top_left.webp" alt="" class="hero-snake-top-left">
+    <!-- Decorative snake image - top right -->
+    <img src="Media/Graphic/snake_top_right.webp" alt="" class="hero-snake-top-right">
+    <!-- Decorative snake image - bottom right -->
+    <img src="Media/Graphic/snake_bottom_right.webp" alt="" class="hero-snake-bottom-right">
+    
     <div class="rules-hero-bg"></div>
     <div class="rules-hero-content">
       <div class="rules-logo">
