--- a/faq.html
+++ b/faq.html
@@ -184,6 +184,13 @@
   
   <!-- Hero Section for FAQ -->
   <div class="faq-hero">
+    <!-- Decorative snake image - top left -->
+    <img src="Media/Graphic/snake_top_left.webp" alt="" class="hero-snake-top-left">
+    <!-- Decorative snake image - top right -->
+    <img src="Media/Graphic/snake_top_right.webp" alt="" class="hero-snake-top-right">
+    <!-- Decorative snake image - bottom right -->
+    <img src="Media/Graphic/snake_bottom_right.webp" alt="" class="hero-snake-bottom-right">
+    
     <div class="faq-hero-bg"></div>
     <div class="faq-hero-content">
       <div class="faq-logo">
