--- a/submission.html
+++ b/submission.html
@@ -185,6 +185,13 @@
   
   <!-- Hero Section for Submission -->
   <div class="submission-hero">
+    <!-- Decorative snake image - top left -->
+    <img src="Media/Graphic/snake_top_left.webp" alt="" class="hero-snake-top-left">
+    <!-- Decorative snake image - top right -->
+    <img src="Media/Graphic/snake_top_right.webp" alt="" class="hero-snake-top-right">
+    <!-- Decorative snake image - bottom right -->
+    <img src="Media/Graphic/snake_bottom_right.webp" alt="" class="hero-snake-bottom-right">
+    
     <div class="submission-hero-bg"></div>
     <div class="submission-hero-content">
       <div class="submission-logo">
